<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageview_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/cd_img"
        android:src="@drawable/ic_default_image" />

    <TextView
        android:id="@+id/textview_storename"
        style="@style/commonDetailsh1TextViewStyle"
        android:layout_width="wrap_content"
        android:text="@string/text_dummytext" />

    <TextView
        android:id="@+id/textview_storeaddress"
        style="@style/commonDetailsh2TextViewStyle"
        android:layout_width="match_parent"
        android:drawableRight="@drawable/ic_location_place"
        android:gravity="center_vertical"
        android:text="@string/text_dummytext" />

    <TextView
        android:id="@+id/textview_about"
        style="@style/commonDetailsh2TextViewStyle"
        android:layout_width="match_parent"
        android:drawableRight="@drawable/ic_storeinfo"
        android:text="@string/text_dummytext" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/items_horizontal_margin"
        android:layout_marginRight="@dimen/items_horizontal_margin"
        android:background="#d8d9d8" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tablerow_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textview_name"
                style="@style/commonDetailsh1TextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/text_storedetails_username" />

            <TextView
                android:id="@+id/textview_namevalue"
                style="@style/commonDetailsh2TextViewStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_action_profile"
                android:text="@string/text_dummytext" />

        </TableRow>

        <TableRow
            android:id="@+id/tablerow_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textview_email"
                style="@style/commonDetailsh1TextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/text_storedetails_useremail" />

            <TextView
                android:id="@+id/textview_emailvalue"
                style="@style/commonDetailsh2TextViewStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_content_email_blue"
                android:text="@string/text_dummytext" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tablerow_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textview_phone"
                style="@style/commonDetailsh1TextViewStyle"
                android:layout_width="wrap_content"
                android:text="@string/text_storedetails_usercontact" />

            <TextView
                android:id="@+id/textview_phonevalue"
                style="@style/commonDetailsh2TextViewStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_device_access_call_blue"
                android:text="@string/text_dummytext" />
            
        </TableRow>
    </TableLayout>

</LinearLayout>