<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/items_vertical_margin"
        android:layout_marginLeft="@dimen/items_horizontal_margin"
        android:layout_marginRight="@dimen/items_horizontal_margin"
        android:background="@color/blue_background_color"
        android:paddingBottom="@dimen/items_vertical_padding"
        android:paddingTop="@dimen/items_vertical_padding" >

        <LinearLayout
            android:id="@+id/relativelayout_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/button_cancel"
                style="@style/commonActionButtonStyle"
                android:drawableLeft="@drawable/ic_action_content_remove"
                android:text="@string/text_addbrand_cancel" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/relativelayout_apply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/button_apply"
                style="@style/commonActionButtonStyle"
                android:drawableLeft="@drawable/ic_action_navigation_accept"
                android:text="@string/text_addbrand_done" />

        </LinearLayout>
    </LinearLayout>
    
    <EditText
        android:id="@+id/edittext_name"
        style="@style/commonEditTextStyle"
        android:ems="10"
        android:hint="@string/text_watermark_name"
        android:inputType="textPersonName" >
	</EditText>
</LinearLayout>
